
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct bpf_program {int dummy; } ;
typedef int pcap_t ;


 char* BPF_FILTER ;
 int PCAP_ERRBUF_SIZE ;
 int PKT_BUFSIZ ;
 int exit (int) ;
 int fprintf (int ,char*,char*,...) ;
 int getopt (int,char**,char*) ;
 char* optarg ;
 scalar_t__ opterr ;
 int pcap_compile (int *,struct bpf_program*,char*,int,int ) ;
 char* pcap_geterr (int *) ;
 char* pcap_lookupdev (char*) ;
 int pcap_loop (int *,int,int ,char*) ;
 int * pcap_open_live (char*,int ,int,int,char*) ;
 int pcap_setfilter (int *,struct bpf_program*) ;
 int printf (char*,char*,char*) ;
 int process ;
 int stderr ;
 int usage (char**) ;

int
main(int argc, char **argv)
{
 int ch, ret;
 char *dev = ((void*)0);
 char errbuf[PCAP_ERRBUF_SIZE];
 struct bpf_program bfp;
 pcap_t *ph;

 opterr = 0;

 while ((ch = getopt(argc, argv, "i:")) != -1) {
  switch (ch) {
  case 'i':
   dev = optarg;
   break;
  default:
   usage(argv);
  }
 }

 if (!dev) {
  dev = pcap_lookupdev(errbuf);
  if (!dev) {
   fprintf(stderr, "[-] couldn't find default interface: %s\n", errbuf);
   exit(1);
  }
 }

 ph = pcap_open_live(dev, PKT_BUFSIZ, 1, 1, errbuf);
 if (!ph) {
  fprintf(stderr, "[-] couldn't open interface %s: %s\n", dev, errbuf);
  exit(1);
 }

 ret = pcap_compile(ph, &bfp, BPF_FILTER, 1, 0);
 if (ret == -1) {
  fprintf(stderr, "[-] couldn't parse BPF filter: %s\n", pcap_geterr(ph));
  exit(1);
 }

 pcap_setfilter(ph, &bfp);
 if (ret == -1) {
  fprintf(stderr, "[-] couldn't set BPF filter: %s\n", pcap_geterr(ph));
  exit(1);
 }

 printf("[+] listening on %s: %s\n", dev, BPF_FILTER);

 pcap_loop(ph, -1, process, dev);

 return 0;
}
